--- a/UMoCha/src/main/webapp/css/login.css
+++ b/UMoCha/src/main/webapp/css/login.css
@@ -41,3 +41,20 @@ span{
 	font-size : 0.8em;
 	color : red;
 }
+
+#find{
+	margin : auto;
+	font-size : 0.8em;
+	text-align : center;
+	position : relative;
+	right : 25px;
+}
+
+#find>a:hover{
+	cursor : pointer;
+}
+
+#find a{
+	color : black;
+	text-decoration-line : none;
+}
