--- a/UMoCha/src/main/webapp/css/base.css
+++ b/UMoCha/src/main/webapp/css/base.css
@@ -112,7 +112,6 @@ section{
 .banner1{
 	width : 850px;
 	height : 180px;
-	border : 1px solid black;
 }
 
 .pCar{
@@ -121,25 +120,45 @@ section{
 	display : inline-block;
 }
 
-.pCar>table>tbody>tr+tr>td:nth-child(1){
-	width : 120px;
-	height : 100px;
-}
-
 .nCar{
 	width : 430px;
 	margin : 0px;
 	display : inline-block;
 }
 
-.nCar>table>tbody>tr+tr>td:nth-child(1){
-	width : 120px;
-	height : 100px;
-}
-
 .pnCar{
 	position : relative;
 	top : 50px;
+}
+
+.pnCar table{
+	border : 1px solid black;
+	border-collapse : collapse;
+	text-align : center;
+}
+
+.pnCar table td{
+	border : 1px solid black;
+}
+
+.pnCar b{
+	font-size : 1.2em;
+}
+
+#b1{
+	position : absolute;
+	top : 60px;
+	left : 40px;
+	color : white;
+	font-weight : bold;
+}
+
+#b1-1{
+	font-size : 3em;
+}
+
+#b1-2{
+	font-size : 2em;
 }
 
 /* aside ----------------------------------------------------------------- */
@@ -164,6 +183,12 @@ aside{
 	border : 1px solid black;
 	display : inline-block;
 	margin-top : 50px;
+}
+
+.banner3 img{
+	position : relative;
+	left : -2px;
+	top : -4px;
 }
 
 .loginB{
@@ -230,4 +255,29 @@ aside{
 #asideLeft>div:nth-child(4){
 	position : absolute;
 	top : 440px;
+}
+
+/* userAsideLeft ----------------------------------------------------------------- */
+#userAsideLeft>div{
+	width : 100px;
+	height : 100px;
+	background-color : #CCCCFF;
+	border-radius : 20px;
+	line-height : 100px;
+	font-size : 0.8em;
+	text-align : center;
+}
+
+#userAsideLeft>div:hover{
+	cursor : pointer;	 
+}
+
+#userAsideLeft>div:nth-child(1){
+	position : absolute;
+	top : 80px;
+}
+
+#userAsideLeft>div:nth-child(2){
+	position : absolute;
+	top : 200px;
 }
